log/build_2024-04-28_04-20-17/lp_slam/stdout_stderr.log
running egg_info
writing ../../build/lp_slam/lp_slam.egg-info/PKG-INFO
writing dependency_links to ../../build/lp_slam/lp_slam.egg-info/dependency_links.txt
writing entry points to ../../build/lp_slam/lp_slam.egg-info/entry_points.txt
writing requirements to ../../build/lp_slam/lp_slam.egg-info/requires.txt
writing top-level names to ../../build/lp_slam/lp_slam.egg-info/top_level.txt
reading manifest file '../../build/lp_slam/lp_slam.egg-info/SOURCES.txt'
adding license file 'LICENSE'
running build
running build_py
running install
running install_lib
running install_data
running install_egg_info
  File "/home/arms/paper3_ws/install/lp_slam/lib/python3.10/site-packages/lp_slam/lp_node.py", line 430
    set_limits(ax2, np.concatenate((obs_lhs_R12, obs_rhs_R12), odom[i:i+stepsize, :])
              ^
SyntaxError: '(' was never closed

running install_scripts
Installing lp_node script to /home/arms/paper3_ws/install/lp_slam/lib/lp_slam
